--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -14,7 +14,9 @@
 
   .navbar__contact {
     display: flex;
+    font-weight: bolder;
     color: white;
+    font-size: 1.25rem;
 
     p {
       padding-right: 30px
