--- a/client/src/components/OverviewItem.scss
+++ b/client/src/components/OverviewItem.scss
@@ -1,18 +1,32 @@
 .accordion {
-  max-width: 600px;
-  margin: 2rem auto;
+  width: 1200px;
+  // margin: 2rem auto;
 }
 
 .accordion-title {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   cursor: pointer;
-  background-color: #21aeca;
+  background-color: #e4e5e6;
+  border: solid 2px #272727;
+  font-weight: bolder;
+  font-size: larger;
+
 }
 
-.accordion-title:hover {
-  background-color: #3ab4cc;
+.accordion-left,
+.accordion-right {
+  flex-grow: 1;
+  flex-basis: 0
+}
+
+
+.accordion-middle:hover {
+  background-color: #272727;
+  color: #ffffff;
+  padding: 7px;
+  margin: -7px;
+  border-radius: 10px
 }
 
 .accordion-title,
