--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -44,4 +44,20 @@
     color: white;
     cursor: pointer;
   }
+
+  //form div styling (form in page)
+  // .admin__form {
+  //   width: 100%;
+  //   padding: 1em;
+
+  //   transition: transform 0.3s ease-in;
+
+  //   &--open {
+  //     transform: translateX(0%)
+  //   }
+
+  //   &--close {
+  //     transform: translateX(180%)
+  //   }
+  // }
 }
