--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,11 @@
 .nav-block {
-  height: 100px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  position: static;
-  top: 0px
+    height: 100px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    position: static;
+    top: 0px;
 }
 
-.home-block {}
+.home-block {
+}
