--- a/client/src/components/Home.scss
+++ b/client/src/components/Home.scss
@@ -1,16 +1,14 @@
 .home__container {
-  display: flex;
-  width: 100%;
-  justify-content: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
-.home__welcome {
-  h1 {
+.home_title {
     display: flex;
     justify-content: center;
     text-transform: uppercase;
     font-weight: bold;
     color: #272727;
-    font-size: 50px;
-  }
+    font-size: 30px;
 }
