--- a/client/src/components/form.scss
+++ b/client/src/components/form.scss
@@ -3,7 +3,7 @@
 }
 
 .form__background {
-  // width: 100vw;
+  width: 77vw;
   height: 100vh;
   top: 100px;
   background-color: rgba(255, 255, 255, 0.3);
@@ -11,7 +11,6 @@
   position: fixed;
   display: flex;
   margin-left: 550px;
-  margin-right: auto;
   padding: 0px 75px;
   align-items: flex-start;
 
@@ -44,6 +43,10 @@ form div:not(:nth-child(2n)) {
   display: inline-block;
   width: 100%;
   height: 10em
+}
+
+.form__item__wide {
+  width: 300%
 }
 
 
@@ -80,10 +83,8 @@ input:focus {
 button {
   width: 50%;
   font-weight: bold;
-  font-size: x-large
-}
-
-.admin__form {
-  margin-left: auto;
-  margin-right: auto;
+  font-size: x-large;
+  border-radius: 5px;
+  color: white;
+  background-color: #032433;
 }
