connection to database, wrote pull and push functions, little bit of css

--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -61,7 +61,8 @@
     //     transform: translateX(180%)
     //   }
     // }
+    background: white;
     width: 75%;
-    margin: 0 2rem;
+    margin: 2rem !important;
     padding: 0 3rem;
 }
