start of client/boat dialog

--- a/client/src/components/form.scss
+++ b/client/src/components/form.scss
@@ -81,3 +81,21 @@ button {
     color: white;
     background-color: #032433;
 }
+
+.dialog__iconbutton {
+    width: 128px;
+    height: 128px;
+    margin: 2rem !important;
+    font-size: 8rem;
+    border: 3px solid !important;
+    // border-color: var(--primary-color);
+    border-radius: 50%;
+    box-shadow: none;
+    color: black !important;
+    border-color: black !important;
+}
+
+.dialog__iconbutton:hover {
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    background-color: white !important;
+}
