--- a/client/src/components/CustomButton.scss
+++ b/client/src/components/CustomButton.scss
@@ -1,19 +1,29 @@
+:root {
+    --primary-rgb: 3, 36, 51;
+    --secondary-rgb: 4, 81, 116;
+    --tertiary-rgb: 206, 238, 253;
+}
+
 .custom-button {
-    border: 2px solid lightgray;
-    color: black;
-    transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
-    padding: 1rem 1.5rem;
+    border: 2px solid var(--secondary-color) !important;
+
+    transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s !important;
+    padding: 0rem 1.5rem !important;
     width: auto;
-    border-radius: 10px;
-    font-weight: 550;
-    font-size: 1.25rem;
+    border-radius: 10px !important;
+    font-weight: bolder !important;
+    font-size: 19px !important;
+    line-height: 47px !important;
+    color: var(--secondary-color) !important;
     &--hover {
-        border-color: #7ad0f8;
-        background-color: rgba(#7ad0f8, 0.1);
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+        border-color: var(--secondary-color) !important;
+        background-color: rgba(var(--secondary-rgb), 0.2) !important;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2) !important;
     }
 
     &--selected {
-        background-color: #7ad0f8;
+        background-color: var(--secondary-color) !important;
+        border-color: var(--secondary-color) !important;
+        color: white !important;
     }
 }
