added logging services to the add section"

--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -7,7 +7,7 @@
 
     margin: 0;
     // background: linear-gradient(45deg, #8dd5f7, #41bcf5, #7ad0f8);
-    // background-size: 100%;
+    background-size: 100%;
 }
 
 .admin__options {
