--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -2,10 +2,10 @@
     // height: 100vh;
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     align-items: center;
+    padding: 5rem;
 
-    margin: 0;
     // background: linear-gradient(45deg, #8dd5f7, #41bcf5, #7ad0f8);
     background-size: 100%;
 }
@@ -38,5 +38,4 @@
     align-items: center;
 
     width: 100%;
-    padding: 0 1rem;
 }
