--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -4,7 +4,8 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    width: 100%;
+    // width: 100%;
+    width: 100vw;
     background-color: #032433;
 
     img {
@@ -20,7 +21,7 @@
         min-width: min-content;
         overflow: visible;
         white-space: nowrap;
-        margin-right: 30px;
+        // margin-right: 30px;
         p {
             margin-right: 30px;
         }
