added edit button

--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -35,7 +35,7 @@
 .admin__form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: flex-start;
 
     width: 100%;
 }
