--- a/client/src/components/Admin.scss
+++ b/client/src/components/Admin.scss
@@ -5,6 +5,7 @@
     width: 100%;
     align-items: center;
     padding: 5rem;
+    margin-top: 1.5rem;
 
     // background: linear-gradient(45deg, #8dd5f7, #41bcf5, #7ad0f8);
     background-size: 100%;
