--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -7,7 +7,7 @@
     // width: 100%;
     width: 100vw;
     background-color: #032433;
-
+    padding: 0 2rem;
     img {
         max-height: 75px;
         padding-left: 15px;
