added green background flash when row gets added/edited

--- a/client/src/components/data.css
+++ b/client/src/components/data.css
@@ -9,3 +9,17 @@
 .css-11mde6h-MuiPaper-root {
     border-radius: 10px !important;
 }
+
+@keyframes flash {
+    0%,
+    100% {
+        background-color: inherit;
+    }
+    50% {
+        background-color: #b2fab4;
+    }
+}
+
+.flash-background {
+    animation: flash 1s ease-out infinite;
+}
