--- a/client/src/components/forms/form.scss
+++ b/client/src/components/forms/form.scss
@@ -122,3 +122,7 @@ button {
 .css-7xiw84-MuiGrid-root > .MuiGrid-item {
     padding-left: 0 !important;
 }
+
+.css-6hp17o-MuiList-root-MuiMenu-list {
+    padding: 0 !important;
+}
