added item info

--- a/client/src/components/forms/form.scss
+++ b/client/src/components/forms/form.scss
@@ -126,3 +126,7 @@ button {
 .css-6hp17o-MuiList-root-MuiMenu-list {
     padding: 0 !important;
 }
+
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+    border-radius: 10px !important;
+}
