--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
     position: fixed;
     display: flex;
+    z-index: 10;
     justify-content: space-between;
     align-items: center;
     height: 100px;
