--- a/client/src/pages/Admin.scss
+++ b/client/src/pages/Admin.scss
@@ -41,23 +41,23 @@
     width: 100%;
 }
 
-.boat-data,
+.data-table,
 .individual-data {
     transition: flex-basis 300ms ease-in-out;
 }
 
-.boat-data {
+.data-table {
     flex-basis: 100%; /* Ensures it takes up the full space when individual data is not visible */
 }
 
-.boat-data-collapsed {
+.data-table-collapsed {
     flex-basis: 70%; /* Takes up 70% of the space when individual data is visible */
 }
 
 .individual-data {
-    flex-basis: 0%; /* Starts off not taking any space */
+    flex-basis: 0%;
 }
 
 .individual-data-visible {
-    flex-basis: 30%; /* Takes up 30% of the space when it becomes visible */
+    flex-basis: 30%;
 }
