--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -1,7 +1,9 @@
 .home__container {
     display: flex;
+    flex-direction: column;
     width: 100%;
-    justify-content: center;
+    align-items: center;
+    padding: 1.5rem 5rem 5rem 5rem;
 }
 
 .home_title {
