--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -14,3 +14,9 @@
     color: #272727;
     font-size: 30px;
 }
+
+@media (max-width: 600px) {
+    .home__container {
+        padding: 1.5rem 1rem 2rem 1rem;
+    }
+}
